appId: host.exp.exponent
---
- tapOn:
    point: '70%,80%'
- extendedWaitUntil:
    visible: 'Grey Nuns Garden'
    timeout: 2000
- tapOn: 'Start From'
- tapOn: 'Set destination'
- tapOn: 'Samuel Bronfman Building'
