appId: host.exp.exponent
---
- tapOn: Get to...
- tapOn: Set as starting point
- tapOn: MB Building
- tapOn: MB-1.115
- tapOn: Set destination
- tapOn: MB Building
- swipe:
    from:
      text: MB-1.115
    direction: UP
- tapOn: MB-1.410
- tapOn: GO
- swipe:
    start: '50%, 55%'
    end: '50%, 95%'
- doubleTapOn:
    point: 50%,50%
- swipe:
    start: '50%, 55%'
    end: '50%, 25%'
